[FIX] add structural leveling, bounded Beat Comp and waveform zoom