@@ -1,374 +1,250 @@
 package com.quickmaster.processing.dynamics;
 
-import com.dspark.core.DspMath;
+import com.quickmaster.processing.dynamics.leveler.CancellationToken;
+import com.quickmaster.processing.dynamics.leveler.GainPlanner;
+import com.quickmaster.processing.dynamics.leveler.LevelerAnalysisEngine;
+import com.quickmaster.processing.dynamics.leveler.LevelerCalibrationProfile;
+import com.quickmaster.processing.dynamics.leveler.LoudnessConformanceGuard;
+import com.quickmaster.processing.dynamics.leveler.TruePeakSafety;
+import com.quickmaster.processing.dynamics.leveler.model.AudioFormat;
+import com.quickmaster.processing.dynamics.leveler.model.ControlState;
+import com.quickmaster.processing.dynamics.leveler.model.RampPlan;
+import com.quickmaster.processing.dynamics.leveler.model.SafetyResult;
+import com.quickmaster.processing.dynamics.leveler.model.SafetyStatus;
+import com.quickmaster.processing.dynamics.leveler.model.ShadowAnalysisSnapshot;
+import java.security.MessageDigest;
+import java.security.NoSuchAlgorithmException;
+import java.util.Arrays;
 
 /**
- * <b>Leveler</b> - automatic loudness rider that evens out the song's sections
- * without flattening its musical dynamics.
- * <p>
- * Tooltip: <i>"Evens out the loudness of the song's sections so the master is
- * consistent, while leaving intentionally quiet parts alone."</i>
- * <p>
- * It measures the K-weighted loudness along the track and keeps only changes that
- * last at least {@value #MIN_SECTION_SEC} seconds (a median filter removes shorter
- * events - drum breaks, single hits, a two-second tail, a brief interlude - so
- * they are never mistaken for a section). Each section is compared to the track's
- * <b>median section loudness</b>:
- * <ul>
- *   <li>a section within a couple of dB of the median is left untouched, so the
- *       natural loudness contour between sections survives;</li>
- *   <li>a section clearly above the median comes down (cuts go deeper than boosts,
- *       because reining in a loud part is always safe);</li>
- *   <li>a section clearly below the median comes up, but the boost <b>rolls off</b>
- *       the further under the median it sits and reaches zero for parts kept quiet
- *       on purpose (an outro fade, a breakdown, the ring-out at the end), so those
- *       are never pumped up.</li>
- * </ul>
- * A boost is additionally capped so a section's peak can never exceed the track
- * peak: leveling therefore <b>never raises the master's true peak</b>, and so can
- * never take headroom away from the downstream peak normalizer.
- * <p>
- * The gain rides between sections <b>asymmetrically</b>: it anticipates a rise
- * (lifts a quiet part before it begins) but only falls once a louder part actually
- * starts (a quiet passage is never dipped early).
- * <p>
- * Controls: <b>Leveling</b> ({@code 0}&nbsp;= off, {@code 1}&nbsp;= full correction
- * toward the median) and <b>Speed</b> ({@code 0}&nbsp;= slow/gentle,
- * {@code 1}&nbsp;= fast/agile - how quickly the gain rides between sections).
+ * Offline structural level matching between confidently comparable musical sections.
+ * Analysis is control-independent and immutable. Only a current build-bound,
+ * ramp-allocated and finite true-peak-proved schedule can affect audio.
+ * Intro/outro/break and other protected regions never receive anticipatory gain.
  */
 public final class LevelerProcessor extends AnalysisDynamicsProcessor
 {
-    /** Default and bounds for the leveling amount (0 = off, 1 = full). */
     public static final double DEFAULT_LEVELING = 0.5;
     public static final double MIN_LEVELING = 0.0;
     public static final double MAX_LEVELING = 1.0;
-    /** Default and bounds for the speed (0 = slow, 1 = fast). */
     public static final double DEFAULT_SPEED = 0.5;
     public static final double MIN_SPEED = 0.0;
     public static final double MAX_SPEED = 1.0;
-
-    /**
-     * Shortest level change treated as a section. A median filter of this length
-     * removes anything shorter (a drum break, a single hit, a two-second tail, a
-     * brief interlude), so it is never mistaken for a section and regulated.
-     */
+    /** Retained API constant; duration alone is not evidence of comparability. */
     public static final double MIN_SECTION_SEC = 8.0;
-    /** Loudness is measured per this many frames. */
-    private static final int HOP_FRAMES = 2048;
-    /** Gain ride time at the slow / fast ends of the Speed control, in seconds. */
-    private static final double SLOW_RESPONSE_SEC = 2.0;
-    private static final double FAST_RESPONSE_SEC = 0.3;
-    /**
-     * A section within this many dB of the median is left alone, so the natural
-     * loudness contour between sections is not flattened.
-     */
-    private static final double TOLERANCE_DB = 2.0;
-    /** Bounds on the correction: cuts go deeper than boosts, because reining in a
-     *  loud section is always safe but dragging a quiet one up is not. */
-    private static final double MAX_CUT_DB = 12.0;
-    private static final double MAX_BOOST_DB = 6.0;
-    /**
-     * A section up to {@link #BOOST_FULL_BELOW_DB} under the median gets the full
-     * boost; from there the boost fades to zero by {@link #BOOST_ZERO_BELOW_DB}, so
-     * parts kept quiet on purpose (an outro fade, a breakdown, the ring-out at the
-     * end) are never pumped up.
-     */
-    private static final double BOOST_FULL_BELOW_DB = 8.0;
-    private static final double BOOST_ZERO_BELOW_DB = 20.0;
-    private static final double SILENCE_FLOOR_LUFS = -55.0;
-    private static final double LUFS_OFFSET = -0.691;          // BS.1770-4
 
+    // The historical diagnostic API remains readable, but this immutable analysis
+    // now also supplies the active planner. It never retains input PCM or gain.
+    private volatile ShadowAnalysisSnapshot shadowAnalysis;
     private volatile double leveling = DEFAULT_LEVELING;
     private volatile double speed = DEFAULT_SPEED;
 
-    // Per-hop section loudness (median-filtered), the hop size, and the track median.
-    private float[] sectionLoud = new float[0];
-    // Per-hop peak (the hop plus its immediate neighbours) and the whole-track peak:
-    // a boost is capped so a hop's peak can never exceed the track peak, which keeps
-    // leveling from raising the master's true peak even through gain interpolation.
-    private float[] sectionPeak = new float[0];
-    private double trackMaxPeak = 0.0;
-    private int hopFrames = HOP_FRAMES;
-    private int totalFrames = 0;
-    private double medianLufs = SILENCE_FLOOR_LUFS;
-
     public double getLeveling() { return leveling; }
-
-    /** Sets the leveling amount in {@code [0,1]}. */
-    public void setLeveling(double v)
-    {
-        this.leveling = DspMath.clamp(v, MIN_LEVELING, MAX_LEVELING);
-    }
-
     public double getSpeed() { return speed; }
+    public String getAnalysisDiagnostic() { return publishedGain().status().name(); }
+    public ShadowAnalysisSnapshot getShadowAnalysis() { return shadowAnalysis; }
 
-    /** Sets the speed in {@code [0,1]} (0 = slow, 1 = fast). */
-    public void setSpeed(double v)
+    public synchronized void setLeveling(double value)
     {
-        this.speed = DspMath.clamp(v, MIN_SPEED, MAX_SPEED);
+        if (!Double.isFinite(value)) throw new IllegalArgumentException("Leveling must be finite.");
+        double next = Math.max(MIN_LEVELING, Math.min(MAX_LEVELING, value));
+        if (next != leveling)
+        {
+            leveling = next;
+            publishUnit(AnalysisStatus.UNIT);
+        }
     }
 
-    /** The track's median section loudness (the level sections are pulled toward). */
-    public double getMedianLufs() { return medianLufs; }
-
-    private double responseSec()
+    public synchronized void setSpeed(double value)
     {
-        return SLOW_RESPONSE_SEC + speed * (FAST_RESPONSE_SEC - SLOW_RESPONSE_SEC);
+        if (!Double.isFinite(value)) throw new IllegalArgumentException("Speed must be finite.");
+        double next = Math.max(MIN_SPEED, Math.min(MAX_SPEED, value));
+        if (next != speed)
+        {
+            speed = next;
+            publishUnit(AnalysisStatus.UNIT);
+        }
+    }
+
+    /** Informational section median only; correction references come from comparable cohorts. */
+    public double getMedianLufs()
+    {
+        ShadowAnalysisSnapshot snapshot = shadowAnalysis;
+        if (snapshot == null) return -55;
+        double[] values = new double[snapshot.cache().descriptors().size()];
+        int count = 0;
+        for (int i = 0; i < values.length; i++)
+        {
+            var loudness = snapshot.cache().descriptors().get(i).regionalLoudness();
+            if (loudness.present()) values[count++] = loudness.lufs();
+        }
+        if (count == 0) return -55;
+        Arrays.sort(values, 0, count);
+        return values[(count - 1) / 2];
+    }
+
+    /** Share only immutable control-independent analysis; analyze revalidates the actual input bits. */
+    public synchronized LevelerProcessor forkForAnalysis(double nextLeveling, double nextSpeed)
+    {
+        LevelerProcessor fork = new LevelerProcessor();
+        fork.setLeveling(nextLeveling);
+        fork.setSpeed(nextSpeed);
+        fork.setEnabled(isEnabled());
+        fork.shadowAnalysis = shadowAnalysis;
+        return fork;
+    }
+
+    @Override
+    public synchronized void analyze(float[] samples, int channels)
+    {
+        analyze(samples, channels, new CancellationToken());
+    }
+
+    /** Poll-only cancellation for an offline caller; the token is not retained. */
+    public synchronized void analyze(float[] samples, int channels, CancellationToken token)
+    {
+        CancellationToken cancellation = token == null ? new CancellationToken() : token;
+        if (cancellation.isCancelled())
+        {
+            shadowAnalysis = null;
+            publishUnit(AnalysisStatus.CANCELLED);
+            return;
+        }
+        if (samples == null || samples.length == 0 || (channels != 1 && channels != 2)
+                || samples.length % channels != 0 || analysisRateHz() <= 0)
+        {
+            shadowAnalysis = null;
+            publishUnit(AnalysisStatus.INVALID_INPUT);
+            return;
+        }
+        try
+        {
+            AudioFormat format = new AudioFormat(analysisRateHz(), channels, samples.length / channels);
+            byte[] fingerprint = fingerprint(samples, channels, cancellation);
+            if (fingerprint == null)
+            {
+                shadowAnalysis = null;
+                publishUnit(AnalysisStatus.CANCELLED);
+                return;
+            }
+            ShadowAnalysisSnapshot next = shadowAnalysis;
+            if (!matches(next, format, fingerprint))
+                next = new LevelerAnalysisEngine().analyzeShadow(samples, format, cancellation);
+            shadowAnalysis = next;
+            if (next == null || cancellation.isCancelled())
+            {
+                publishUnit(cancellation.isCancelled() ? AnalysisStatus.CANCELLED : AnalysisStatus.INSUFFICIENT_ANALYSIS);
+                return;
+            }
+            if (leveling == 0)
+            {
+                publishUnit(AnalysisStatus.UNIT);
+                return;
+            }
+            if (!new LoudnessConformanceGuard().authorizesCurrentBuild(next.diagnostics().standardValidation()))
+            {
+                publishUnit(AnalysisStatus.STANDARD_VALIDATION_FAILED);
+                return;
+            }
+            RampPlan plan = new GainPlanner().plan(next.cache(), new ControlState(leveling, speed));
+            SafetyResult safe = new TruePeakSafety().constrain(samples, format, plan, cancellation);
+            if (cancellation.isCancelled())
+                publishUnit(AnalysisStatus.CANCELLED);
+            else if (safe != null && safe.proof().status() == SafetyStatus.INFEASIBLE_INPUT_BASELINE)
+                publishUnit(AnalysisStatus.INFEASIBLE_INPUT_BASELINE);
+            else if (safe == null || !safe.proof().proven())
+                publishUnit(AnalysisStatus.PEAK_UNSAFE);
+            else
+                publishStructural(safe.schedule(), channels);
+        }
+        catch (IllegalArgumentException | IllegalStateException | ArithmeticException ex)
+        {
+            shadowAnalysis = null;
+            publishUnit(AnalysisStatus.INVALID_INPUT);
+        }
+    }
+
+    @Override
+    public void adoptEnvelope(AnalysisDynamicsProcessor source)
+    {
+        if (!(source instanceof LevelerProcessor other))
+            throw new IllegalArgumentException("Leveler can only adopt a structural Leveler analysis.");
+        PublishedGain publication;
+        ShadowAnalysisSnapshot analysis;
+        double sourceLeveling, sourceSpeed;
+        // Capture without holding this lock: reciprocal adoption cannot deadlock.
+        synchronized (other)
+        {
+            publication = other.publishedGain();
+            analysis = other.shadowAnalysis;
+            sourceLeveling = other.leveling;
+            sourceSpeed = other.speed;
+        }
+        synchronized (this)
+        {
+            if (leveling != sourceLeveling || speed != sourceSpeed) return;
+            shadowAnalysis = analysis;
+            adoptPublication(publication);
+        }
+    }
+
+    @Override
+    synchronized void clearAnalysis()
+    {
+        shadowAnalysis = null;
+        super.clearAnalysis();
     }
 
     @Override
     protected void computeFeatures(float[] samples, int channels, int sampleRate, int frames)
     {
-        this.totalFrames = frames;
-        this.hopFrames = HOP_FRAMES;
-
-        double[] kc = kWeightingCoeffs(sampleRate);
-        double pB0 = kc[0], pB1 = kc[1], pB2 = kc[2], pA1 = kc[3], pA2 = kc[4];
-        double rB0 = kc[5], rB1 = kc[6], rB2 = kc[7], rA1 = kc[8], rA2 = kc[9];
-        // Per-channel filter state: BS.1770 sums the K-weighted power of each
-        // channel (a mono fold-down would cancel out-of-phase side content).
-        double[] z1a = new double[channels], z2a = new double[channels];
-        double[] z1b = new double[channels], z2b = new double[channels];
-
-        int numHops = Math.max(1, (frames + HOP_FRAMES - 1) / HOP_FRAMES);
-        double[] hopSumSq = new double[numHops];
-        long[] hopCount = new long[numHops];
-        float[] hopPeak = new float[numHops];
-        for (int f = 0; f < frames; f++)
-        {
-            int base = f * channels;
-            double power = 0.0;
-            float peak = 0.0f;
-            for (int c = 0; c < channels; c++)
-            {
-                double x = samples[base + c];
-                double v = pB0 * x + z1a[c];
-                z1a[c] = pB1 * x - pA1 * v + z2a[c];
-                z2a[c] = pB2 * x - pA2 * v;
-                double w = rB0 * v + z1b[c];
-                z1b[c] = rB1 * v - rA1 * w + z2b[c];
-                z2b[c] = rB2 * v - rA2 * w;
-                power += w * w;
-                float ax = Math.abs((float) x);
-                if (ax > peak) peak = ax;
-            }
-
-            int h = f / HOP_FRAMES;
-            hopSumSq[h] += power;
-            hopCount[h]++;
-            if (peak > hopPeak[h]) hopPeak[h] = peak;
-        }
-        float[] hopLoud = new float[numHops];
-        double maxPeak = 0.0;
-        for (int h = 0; h < numHops; h++)
-        {
-            double ms = (hopCount[h] > 0) ? hopSumSq[h] / hopCount[h] : 0.0;
-            hopLoud[h] = (float) (LUFS_OFFSET + 10.0 * Math.log10(Math.max(ms, 1e-12)));
-            if (hopPeak[h] > maxPeak) maxPeak = hopPeak[h];
-        }
-        this.trackMaxPeak = maxPeak;
-
-        // Median filter: keep only changes lasting >= MIN_SECTION_SEC; drop shorter
-        // events (breaks, single hits, brief tails) so they are never mistaken for a
-        // section. The cap peak is the loudest sample in the hop and its neighbours
-        // (a narrow window: just enough to stay peak-safe across the interpolation).
-        int half = Math.max(1, (int) (MIN_SECTION_SEC * sampleRate / HOP_FRAMES) / 2);
-        float[] section = new float[numHops];
-        float[] secPeak = new float[numHops];
-        int[] hist = new int[700];
-        for (int h = 0; h < numHops; h++)
-        {
-            int lo = Math.max(0, h - half), hi = Math.min(numHops - 1, h + half);
-            float m = median(hopLoud, lo, hi);
-            section[h] = m;
-            int pl = Math.max(0, h - 1), ph = Math.min(numHops - 1, h + 1);
-            float pk = 0.0f;
-            for (int i = pl; i <= ph; i++) if (hopPeak[i] > pk) pk = hopPeak[i];
-            secPeak[h] = pk;
-            if (m > SILENCE_FLOOR_LUFS)
-            {
-                int bin = (int) ((m + 65.0) * 10.0);
-                if (bin < 0) bin = 0; else if (bin >= hist.length) bin = hist.length - 1;
-                hist[bin]++;
-            }
-        }
-        this.sectionLoud = section;
-        this.sectionPeak = secPeak;
-        this.medianLufs = percentile(hist, 0.5);
+        throw new IllegalStateException("Structural Leveler does not use the legacy dense mapper.");
     }
 
     @Override
     protected void mapFeaturesToGain()
     {
-        int hops = sectionLoud.length;
-        float[] env = new float[totalFrames];
-        if (hops == 0 || totalFrames == 0 || leveling <= 0.0)
-        {
-            java.util.Arrays.fill(env, 1.0f);
-            gainEnv = env;
-            return;
-        }
-        double hopSec = (double) hopFrames / envRate;
-        double resp = responseSec();
+        throw new IllegalStateException("Structural Leveler does not allocate a per-frame gain envelope.");
+    }
 
-        // The outro: everything past the last body-level section (a fade, a
-        // ring-out, a quiet ending) is left alone and never pumped back up. A quiet
-        // part earlier in the song still has a louder section ahead of it, so it is
-        // a genuine dip worth evening out.
-        double bodyThresh = medianLufs - TOLERANCE_DB;
-        int lastBodyHop = 0;
-        for (int h = hops - 1; h >= 0; h--)
-        {
-            if (sectionLoud[h] >= bodyThresh) { lastBodyHop = h; break; }
-        }
+    private static boolean matches(ShadowAnalysisSnapshot snapshot, AudioFormat format, byte[] fingerprint)
+    {
+        if (snapshot == null) return false;
+        var cache = snapshot.cache();
+        return cache.format().sampleRateHz() == format.sampleRateHz()
+                && cache.format().channels() == format.channels()
+                && cache.format().frames() == format.frames()
+                && cache.algorithmId().equals(LevelerAnalysisEngine.ALGORITHM_ID)
+                && cache.profileId().equals(LevelerCalibrationProfile.V2.profileId())
+                && cache.comparison() != null
+                && cache.comparison().format() == cache.format()
+                && Arrays.equals(cache.copyPcmFingerprintSha256(), fingerprint);
+    }
 
-        // Target gain per hop, toward the median. Only the deviation beyond the
-        // tolerance is corrected (natural dynamics survive); a boost is capped, is
-        // rolled off for parts far below the median (kept quiet on purpose), and
-        // can never lift a section's peak above the track peak (so leveling cannot
-        // steal the peak normalizer's headroom).
-        float[] target = new float[hops];
-        for (int h = 0; h < hops; h++)
+    private static byte[] fingerprint(float[] pcm, int channels, CancellationToken token)
+    {
+        try
         {
-            double dev = medianLufs - sectionLoud[h];       // + => quieter than the body
-            double corrDb;
-            if (dev >= 0.0)
+            MessageDigest digest = MessageDigest.getInstance("SHA-256");
+            byte[] bytes = new byte[8192];
+            int used = 0;
+            for (int i = 0; i < pcm.length; i++)
             {
-                double boost = (h > lastBodyHop) ? 0.0
-                        : Math.min(Math.max(0.0, dev - TOLERANCE_DB), MAX_BOOST_DB) * boostRolloff(dev);
-                corrDb = leveling * boost;
+                if (i % (4096 * channels) == 0 && token.isCancelled()) return null;
+                if (!Float.isFinite(pcm[i])) throw new IllegalArgumentException("Non-finite Leveler input.");
+                int bits = Float.floatToRawIntBits(pcm[i]);
+                bytes[used++] = (byte) (bits >>> 24);
+                bytes[used++] = (byte) (bits >>> 16);
+                bytes[used++] = (byte) (bits >>> 8);
+                bytes[used++] = (byte) bits;
+                if (used == bytes.length) { digest.update(bytes); used = 0; }
             }
-            else
-            {
-                double cut = Math.min(Math.max(0.0, -dev - TOLERANCE_DB), MAX_CUT_DB);
-                corrDb = -leveling * cut;
-            }
-            double gTarget = DspMath.decibelsToGain(corrDb);
-            target[h] = (float) Math.min(gTarget, peakSafeCap(h));
+            digest.update(bytes, 0, used);
+            return token.isCancelled() ? null : digest.digest();
         }
-
-        // Anticipate rises, hold through falls until the boundary, then a causal glide.
-        int look = Math.max(1, (int) (resp * 0.5 / hopSec));
-        float[] lead = forwardSlidingMax(target, look);
-        double a = Math.exp(-hopSec / (resp * 0.4));
-        float[] gain = new float[hops];
-        double g = lead[0];
-        for (int h = 0; h < hops; h++) { g = a * g + (1 - a) * lead[h]; gain[h] = (float) g; }
-
-        // The look-ahead can slide a boost onto an earlier hop with a loud peak;
-        // re-apply the cap so the ride can never raise the track peak either.
-        for (int h = 0; h < hops; h++)
+        catch (NoSuchAlgorithmException ex)
         {
-            double cap = peakSafeCap(h);
-            if (gain[h] > cap) gain[h] = (float) cap;
+            throw new IllegalStateException("SHA-256 is required for analysis identity.", ex);
         }
-
-        // Upsample the per-hop gain to a per-frame envelope (linear interpolation).
-        for (int f = 0; f < totalFrames; f++)
-        {
-            double hp = (double) f / hopFrames;
-            int h0 = (int) hp;
-            if (h0 >= hops - 1) { env[f] = gain[hops - 1]; continue; }
-            double frac = hp - h0;
-            env[f] = (float) (gain[h0] + frac * (gain[h0 + 1] - gain[h0]));
-        }
-        gainEnv = env;
-    }
-
-    /**
-     * Boost weight for a section {@code belowDb} under the median: full up to
-     * {@link #BOOST_FULL_BELOW_DB}, fading to zero by {@link #BOOST_ZERO_BELOW_DB}.
-     */
-    private static double boostRolloff(double belowDb)
-    {
-        if (belowDb <= BOOST_FULL_BELOW_DB) return 1.0;
-        if (belowDb >= BOOST_ZERO_BELOW_DB) return 0.0;
-        return (BOOST_ZERO_BELOW_DB - belowDb) / (BOOST_ZERO_BELOW_DB - BOOST_FULL_BELOW_DB);
-    }
-
-    /**
-     * Largest boost ({@code >= 1}) that keeps hop {@code h}'s peak at or below the
-     * track peak, so leveling never raises the master's true peak.
-     */
-    private double peakSafeCap(int h)
-    {
-        if (sectionPeak == null || h >= sectionPeak.length) return Double.MAX_VALUE;
-        double sp = sectionPeak[h];
-        if (sp <= 1e-9 || trackMaxPeak <= 0.0) return Double.MAX_VALUE;
-        return Math.max(1.0, trackMaxPeak / sp);
-    }
-
-    private static float median(float[] a, int lo, int hi)
-    {
-        int n = hi - lo + 1;
-        float[] tmp = new float[n];
-        System.arraycopy(a, lo, tmp, 0, n);
-        java.util.Arrays.sort(tmp);
-        return tmp[n / 2];
-    }
-
-    /** {@code res[i] = max(a[i .. min(i+look, n-1)])}, O(n) via a monotonic deque. */
-    private static float[] forwardSlidingMax(float[] a, int look)
-    {
-        int n = a.length;
-        float[] res = new float[n];
-        int[] dq = new int[n];
-        int head = 0, tail = 0;
-        for (int p = n - 1; p >= 0; p--)
-        {
-            while (tail > head && a[dq[tail - 1]] <= a[p]) tail--;
-            dq[tail++] = p;
-            if (dq[head] > p + look) head++;
-            res[p] = a[dq[head]];
-        }
-        return res;
-    }
-
-    private static double percentile(int[] hist, double p)
-    {
-        long total = 0;
-        for (int h : hist) total += h;
-        if (total == 0) return SILENCE_FLOOR_LUFS;
-        long target = (long) Math.ceil(p * total);
-        long cum = 0;
-        for (int b = 0; b < hist.length; b++)
-        {
-            cum += hist[b];
-            if (cum >= target) return b / 10.0 - 65.0;
-        }
-        return 0.0;
-    }
-
-    /**
-     * BS.1770-4 K-weighting biquad coefficients (high-shelf + RLB high-pass) as
-     * {@code [pB0,pB1,pB2,pA1,pA2, rB0,rB1,rB2,rA1,rA2]}.
-     */
-    private static double[] kWeightingCoeffs(double sr)
-    {
-        double fc = 1681.97, g = 3.99984, q = 0.70710678;
-        double a = Math.pow(10.0, g / 40.0);
-        double w0 = 2.0 * Math.PI * fc / sr;
-        double alpha = Math.sin(w0) / (2.0 * q);
-        double cosw0 = Math.cos(w0);
-        double sqrtA = Math.sqrt(a);
-        double a0 = (a + 1.0) - (a - 1.0) * cosw0 + 2.0 * sqrtA * alpha;
-        double pB0 = (a * ((a + 1.0) + (a - 1.0) * cosw0 + 2.0 * sqrtA * alpha)) / a0;
-        double pB1 = (-2.0 * a * ((a - 1.0) + (a + 1.0) * cosw0)) / a0;
-        double pB2 = (a * ((a + 1.0) + (a - 1.0) * cosw0 - 2.0 * sqrtA * alpha)) / a0;
-        double pA1 = (2.0 * ((a - 1.0) - (a + 1.0) * cosw0)) / a0;
-        double pA2 = (((a + 1.0) - (a - 1.0) * cosw0 - 2.0 * sqrtA * alpha)) / a0;
-
-        double fc2 = 38.13547, q2 = 0.500327;
-        double w02 = 2.0 * Math.PI * fc2 / sr;
-        double alpha2 = Math.sin(w02) / (2.0 * q2);
-        double cosw02 = Math.cos(w02);
-        double a02 = 1.0 + alpha2;
-        double rB0 = ((1.0 + cosw02) / 2.0) / a02;
-        double rB1 = (-(1.0 + cosw02)) / a02;
-        double rB2 = ((1.0 + cosw02) / 2.0) / a02;
-        double rA1 = (-2.0 * cosw02) / a02;
-        double rA2 = (1.0 - alpha2) / a02;
-
-        return new double[] { pB0, pB1, pB2, pA1, pA2, rB0, rB1, rB2, rA1, rA2 };
     }
 }
